--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
 		"gulp-uglifyjs": "^0.6.2",
 		"gulp-webp": "^4.0.1",
 		"imagemin-pngquant": "^9.0.1",
-		"jquery-pjax": "^2.0.1"
+		"jquery-pjax": "^2.0.1",
+		"node-normalize-scss": "^8.1.2"
 	},
 	"dependencies": {
 		"Package": "0.0.1",
+		"node-sass-tilde-importer": "^1.0.2",
+		"normalize-scss": "^7.0.1",
+		"normalize.css": "^8.0.1",
 		"reset-css": "^5.0.1"
 	}
 }
