--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"gulp-uglifyjs": "^0.6.2",
 		"gulp-webp": "^4.0.1",
 		"imagemin-pngquant": "^9.0.1",
+		"jquery": "^3.5.1",
 		"jquery-pjax": "^2.0.1",
 		"node-normalize-scss": "^8.1.2"
 	},
